# MyWebApp

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/src/: main.py
backend/src/app/: model.py
backend/src/config/: config.py
backend/src/dao/: access_db.py  mysql_db.py
backend/src/database/: access_db.py  mysql_db.py
backend/tst/: app_model_test.py  test_endpoints.py
database/: README.md
frontend/: README.md
