[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "mysql-connector-python>=9.5.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
